<resources>
    <string name="app_name">kIdolRecognizer</string>

    <string name="stage_name">Recognizing</string>
    <string name="real_name">Please wait</string>

    <string name="group">Group</string>
    <string name="group_name">Group Name</string>
    <string name="entertainment">Entertainment</string>
    <string name="entertainment_name">Entertainment</string>

    <string name="roles">Roles</string>
    <string name="role_name">Role Name</string>

    <string name="stats">Stats</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="blood_type">Type</string>

    <string name="nationality">Nationality</string>
    <string name="nationality_name">Nationality Name</string>

    <string name="sns">SNS</string>
    <string name="personal_ig">Personal IG</string>
    <string name="group_ig">Group IG</string>

    <string name="message">No Match.</string>

    <string name="save">Save to Gallery</string>

    <string name="save_to_gallery">Pick to Save</string>
    <string name="cropped">Cropped</string>
    <string name="original">Original</string>
    <string name="platform_name">Platform Name</string>
    <string name="username">Username</string>
    <string name="cancel">Cancel</string>

    <string name="my_favorites">My Favorites</string>
    <string name="explore">Explore</string>
    <string name="rearrange">Rearrange</string>
    <string name="profile">Profile</string>
    <string name="sort_amp_filter"><![CDATA[Sort & Filter]]></string>
    <string name="view_my_gallery">View My Gallery</string>
    <string name="active_idols">Active Idols</string>
    <string name="filter_gender">Gender</string>

    <array name="initial_zoom_value">
        <item>0.0</item>
    </array>

</resources>