<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/persistent_bottom_sheet"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pers_bottom_sheet_bg"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="false"
    app:behavior_peekHeight="140dp"
    android:paddingHorizontal="25dp"
    android:paddingVertical="35dp"
    android:animateLayoutChanges="false">

    <!-- Idols Name & Cropped Face -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <!-- Description -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical">
            <TextView
                android:id="@+id/stage_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Title"
                android:text="@string/stage_name"/>

            <TextView
                android:id="@+id/real_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Title2"
                android:text="@string/real_name"/>

        </LinearLayout>

        <!-- Cropped Face -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="end">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="70dp"
                android:layout_height="70dp"
                style="@style/CardImage">

                <ImageView
                    android:id="@+id/face_image_view"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="fitXY"/>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>

    <!-- Group Name & Entertainment -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="6dp"
                style="@style/Header"
                android:text="@string/group"/>
            <TextView
                android:id="@+id/group_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Title3"
                android:text="@string/group_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="6dp"
                style="@style/Header"
                android:text="@string/entertainment"/>
            <TextView
                android:id="@+id/entertainment_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Title3"
                android:text="@string/entertainment_name"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Roles -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        style="@style/Header"
        android:text="@string/roles"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/roles_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="70dp"/>

    <!-- Stats -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        style="@style/Header"
        android:text="@string/stats"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginBottom="0dp">

            <!-- Age -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                style="@style/Card">
                <TextView
                    android:id="@+id/age_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="30dp"
                    style="@style/CardText"
                    android:text="@string/age"/>
            </com.google.android.material.card.MaterialCardView>

            <!-- Height -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                style="@style/Card">
                <TextView
                    android:id="@+id/height_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="30dp"
                    style="@style/CardText"
                    android:text="@string/height"/>
            </com.google.android.material.card.MaterialCardView>

            <!-- Weight -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                style="@style/Card">
                <TextView
                    android:id="@+id/weight_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="30dp"
                    style="@style/CardText"
                    android:text="@string/weight"/>
            </com.google.android.material.card.MaterialCardView>

            <!-- Blood Type -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                style="@style/Card">
                <TextView
                    android:id="@+id/blood_type_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="30dp"
                    style="@style/CardText"
                    android:text="@string/blood_type"/>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </HorizontalScrollView>

    <!-- Nationality -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        style="@style/Header"
        android:text="@string/nationality"/>
    <TextView
        android:id="@+id/nationality_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Title3"
        android:text="@string/nationality_name"/>

    <!-- SNS / Social Media Accounts -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        style="@style/Header"
        android:text="@string/sns"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="0dp"
        android:weightSum="3">

        <!-- Idol IG -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            style="@style/Card">
            <TextView
                android:id="@+id/idol_ig_text_view"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                style="@style/CardText"
                android:text="@string/idol_ig"/>
        </com.google.android.material.card.MaterialCardView>

        <!-- Group IG -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            style="@style/Card">
            <TextView
                android:id="@+id/group_ig_text_view"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                style="@style/CardText"
                android:text="@string/group_ig"/>
        </com.google.android.material.card.MaterialCardView>

        <!-- Empty -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            style="@style/CardEmpty">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                style="@style/CardText"
                android:text=""/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


</LinearLayout>