<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/modal_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingHorizontal="25dp"
    android:paddingBottom="20dp"
    android:background="@color/space_gray"
    android:weightSum="2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/ModalTitle"
        android:text="@string/save_to_gallery"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:padding="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/idol_full_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CardImage"
                android:clickable="true">

                <ImageView
                    android:id="@+id/idol_full_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:padding="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/idol_cropped_card"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                style="@style/CardImage"
                android:clickable="true">

                <ImageView
                    android:id="@+id/idol_cropped_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>


    </LinearLayout>

    <!-- Idol Crop & Full Labels -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"
            android:text="@string/original"
            android:gravity="center"
            style="@style/ModalLabel"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"
            android:text="@string/cropped"
            android:gravity="center"
            style="@style/ModalLabel"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginTop="15dp"
        style="@style/ButtonBottomBar"
        android:text="@string/cancel"
        android:layout_gravity="end" />

</LinearLayout>