<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/modal_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="25dp"
    android:paddingBottom="25dp"
    android:background="@color/space_gray_light"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="25dp"
        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center"
            android:layout_gravity="center"
            style="@style/ModalTitle"
            android:text="@string/save_to_gallery"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            style="@style/ModalCloseButton"
            android:padding="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:paddingHorizontal="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/idol_full_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CardImage"
                android:clickable="true">

                <ImageView
                    android:id="@+id/idol_full_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/idol_cropped_card"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                style="@style/CardImage"
                android:clickable="true">

                <ImageView
                    android:id="@+id/idol_cropped_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>


    </LinearLayout>

    <!-- Idol Crop & Full Labels -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:paddingVertical="21dp"
        android:paddingHorizontal="35dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/original"
            android:gravity="center"
            style="@style/ModalLabel"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cropped"
            android:gravity="center"
            style="@style/ModalLabel"/>

    </LinearLayout>

</LinearLayout>